--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "node index.js",
+    "lint": "npx eslint ."
   },
   "author": "Mariela Gonzalez",
   "license": "ISC",
@@ -13,6 +14,7 @@
     "express": "^4.21.2"
   },
   "devDependencies": {
+    "eslint": "^8.56.0",
     "nodemon": "^3.1.9"
   }
 }
