Chenged root to start in package.json

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "web_project_around_express",
   "version": "1.0.0",
   "description": "Backend project with express",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
