--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js",
-    "lint": "npx eslint ."
+    "start": "node app.js",
+    "lint": "npx eslint .",
+    "dev": "nodemon app.js"
   },
   "author": "Mariela Gonzalez",
   "license": "ISC",
