Added some stuffs

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Mariela Gonzalez",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.21.2"
   },
   "devDependencies": {
